--- a/html/CV.html
+++ b/html/CV.html
@@ -87,7 +87,7 @@
                     Masterstudium
                 </h3>
                     <p lang="en">
-                        (2020-2022) Master's degree programme Physics (in English) of NAWI Graz (cooperation of Graz University of Technology and University of Graz)
+                        (2020-2022) Master's degree program Physics (in English) of NAWI Graz (cooperation of Graz University of Technology and University of Graz)
                     </p>
                     <p lang="de" style="display: none;">
                         (2020-2022) Englischsprachiges NAWI Graz Masterstudium Physics (Kooperation der KFU und der TU Graz)
@@ -101,7 +101,7 @@
                     Bachelorstudium
                 </h3>
                     <p lang="en">
-                        (2016-2020) Bachelor's degree programme Physics of NAWI Graz (cooperation of Graz University of Technology and University of Graz)
+                        (2016-2020) Bachelor's degree program Physics of NAWI Graz (cooperation of Graz University of Technology and University of Graz)
                     </p>
                     <p lang="de" style="display: none;">
                         (2016-2020) NAWI Graz Bachelorstudium Physik (Kooperation der KFU und der TU Graz)
