--- a/html/CV.html
+++ b/html/CV.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Philipp Schreiner</title>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Philipp Schreiner</title>
 
-    <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <script src="https://code.jquery.com/jquery-latest.min.js"></script>
-    <script type="text/javascript" src="../js/scripts.js" defer></script>
-</head>
+        <script src="https://code.jquery.com/jquery-latest.min.js"></script>
+        <script type="text/javascript" src="../js/scripts.js" defer></script>
+    </head>
 <body>
     <header>
         <button type="button" id="navbar-button" menu-expanded="false">
@@ -92,9 +92,9 @@
                     <p lang="de" style="display: none;">
                         (2020-2022) Englischsprachiges NAWI Graz Masterstudium Physics (Kooperation der KFU und der TU Graz)
                     </p>
-                    <p class="detail_text" lang="en">Graduation pending</p>
+                    <p class="detail_text" lang="en">Graduation with distinction on December 15, 2022</p>
                     <p class="detail_text" lang="de" style="display: none;">
-                        Abschluss ausständig
+                        Mit Auszeichnung abgeschlossen am 15. Dezember 2022
                     </p>
                 <h3 class="entry_title" lang="en">Undergraduate Studies</h3>
                 <h3 class="entry_title" lang="de" style="display: none;">
