--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
                     <!-- <a href="https://twitter.com/phschreiner_" target="_blank" class="link_field">Twitter</a>
                     <a href="mailto:ph.schreiner@edu.uni-graz.at" class="link_field">Mail</a>
                     <a href="https://github.com/philipp-schreiner" target="_blank" class="link_field">GitHub</a> -->
-                    <a href="mailto:ph.schreiner@edu.uni-graz.at" class="contact_link"><i class="fa fa-envelope"></i> ph.schreiner@edu.uni-graz.at</a><br>
-                    <a href="https://twitter.com/phschreiner_" target="_blank" class="contact_link"><i class="fa fa-twitter"></i> @phschreiner_</a><br>
-                    <a href="https://github.com/philipp-schreiner" target="_blank" class="contact_link"><i class="fa fa-github"></i> philipp-schreiner</a>
+                    <a href="mailto:ph.schreiner@edu.uni-graz.at" class="contact_link"><!-- <i class="fa fa-envelope"></i> -->ph.schreiner@edu.uni-graz.at</a><br>
+                    <a href="https://twitter.com/phschreiner_" target="_blank" class="contact_link"><!-- <i class="fa fa-twitter"></i>  -->@phschreiner_</a><br>
+                    <a href="https://github.com/philipp-schreiner" target="_blank" class="contact_link"><!-- <i class="fa fa-github"></i>  -->philipp-schreiner</a>
                 </div>
         </div>
         <div id="main">
