--- a/html/teaching.html
+++ b/html/teaching.html
@@ -22,7 +22,8 @@
             <span class="burger"></span>
         </button>
         <div id="navigation">
-            <a href="../index.html#">Home</a>
+            <a href="../index.html#" lang="en">About Me</a>
+            <a href="../index.html#" lang="de" style="display: none;">Über Mich</a>
 
             <a href="theses_etc.html#" lang="en">Theses</a> 
             <a href="theses_etc.html#" lang="de" style="display: none;">
