--- a/html/theses_etc.html
+++ b/html/theses_etc.html
@@ -22,7 +22,8 @@
             <span class="burger"></span>
         </button>
         <div id="navigation">
-            <a href="../index.html#">Home</a>
+            <a href="../index.html#" lang="en">About Me</a>
+            <a href="../index.html#" lang="de" style="display: none;">Über Mich</a>
 
             <a href="theses_etc.html#" lang="en">Theses</a> 
             <a href="theses_etc.html#" lang="de" style="display: none;">
@@ -54,9 +55,10 @@
         <div id="sidebar">
             <img class="portrait" src="../images/portrait.jpg">
                 <h2>Philipp Schreiner</h2>
-                <h3 lang="en">Physics PhD Student<br>at <a href="https://www.oeaw.ac.at/hephy/home" target='_blank'>HEPHY</a></h3>
+                <h3 lang="en">Physics PhD Student<br>at <a href="https://www.oeaw.ac.at/hephy/home" target='_blank'>HEPHY</a> and <a href="https://www.tuwien.at" target='_blank'>TU Wien</a>
+                </h3>
                 <h3 lang="de" style="display: none;">
-                    Physik Doktoratsstudent<br>am <a href="https://www.oeaw.ac.at/hephy/home" target='_blank'>HEPHY</a>
+                    Physik Doktoratsstudent<br>am <a href="https://www.oeaw.ac.at/hephy/home" target='_blank'>HEPHY</a> und der <a href="https://www.tuwien.at" target='_blank'>TU Wien</a>
                 </h3>
                 <div style="font-weight: normal; margin-top: 20px;" lang="en">Contact:</div>
                 <div style="font-weight: normal; margin-top: 20px; display: none;" lang="de">Kontakt:</div>
@@ -64,7 +66,7 @@
                     <!-- <a href="https://twitter.com/phschreiner_" target="_blank" class="link_field">Twitter</a>
                     <a href="mailto:ph.schreiner@edu.uni-graz.at" class="link_field">Mail</a>
                     <a href="https://github.com/philipp-schreiner" target="_blank" class="link_field">GitHub</a> -->
-                    <a href="mailto:ph.schreiner@edu.uni-graz.at" class="contact_link"><!-- <i class="fa fa-envelope"></i> -->ph.schreiner@edu.uni-graz.at</a><br>
+                    <a href="mailto:philipp.schreiner@oeaw.ac.at" class="contact_link"><!-- <i class="fa fa-envelope"></i> -->philipp.schreiner@oeaw.ac.at</a><br>
                     <a href="https://twitter.com/phschreiner_" target="_blank" class="contact_link"><!-- <i class="fa fa-twitter"></i>  -->@phschreiner_</a><br>
                     <a href="https://github.com/philipp-schreiner" target="_blank" class="contact_link"><!-- <i class="fa fa-github"></i>  -->philipp-schreiner</a>
                 </div>
