--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
             <span class="burger"></span>
         </button>
         <div id="navigation">
-            <a href="index.html#">Home</a>
+            <a href="index.html#" lang="en">About Me</a>
+            <a href="index.html#" lang="de" style="display: none;">Über Mich</a>
 
             <a href="html/theses_etc.html#" lang="en">Theses</a> 
             <a href="html/theses_etc.html#" lang="de" style="display: none;">
@@ -53,9 +54,10 @@
         <div id="sidebar">
             <img class="portrait" src="images/portrait.jpg">
                 <h2>Philipp Schreiner</h2>
-                <h3 lang="en">Physics PhD Student<br>at <a href="https://www.oeaw.ac.at/hephy/home" target='_blank'>HEPHY</a></h3>
+                <h3 lang="en">Physics PhD Student<br>at <a href="https://www.oeaw.ac.at/hephy/home" target='_blank'>HEPHY</a> and <a href="https://www.tuwien.at" target='_blank'>TU Wien</a>
+                </h3>
                 <h3 lang="de" style="display: none;">
-                    Physik Doktoratsstudent<br>am <a href="https://www.oeaw.ac.at/hephy/home" target='_blank'>HEPHY</a>
+                    Physik Doktoratsstudent<br>am <a href="https://www.oeaw.ac.at/hephy/home" target='_blank'>HEPHY</a> und der <a href="https://www.tuwien.at" target='_blank'>TU Wien</a>
                 </h3>
                 <div style="font-weight: normal; margin-top: 20px;" lang="en">Contact:</div>
                 <div style="font-weight: normal; margin-top: 20px; display: none;" lang="de">Kontakt:</div>
@@ -63,26 +65,64 @@
                     <!-- <a href="https://twitter.com/phschreiner_" target="_blank" class="link_field">Twitter</a>
                     <a href="mailto:ph.schreiner@edu.uni-graz.at" class="link_field">Mail</a>
                     <a href="https://github.com/philipp-schreiner" target="_blank" class="link_field">GitHub</a> -->
-                    <a href="mailto:ph.schreiner@edu.uni-graz.at" class="contact_link"><!-- <i class="fa fa-envelope"></i> -->ph.schreiner@edu.uni-graz.at</a><br>
+                    <a href="mailto:philipp.schreiner@oeaw.ac.at" class="contact_link"><!-- <i class="fa fa-envelope"></i> -->philipp.schreiner@oeaw.ac.at</a><br>
                     <a href="https://twitter.com/phschreiner_" target="_blank" class="contact_link"><!-- <i class="fa fa-twitter"></i>  -->@phschreiner_</a><br>
                     <a href="https://github.com/philipp-schreiner" target="_blank" class="contact_link"><!-- <i class="fa fa-github"></i>  -->philipp-schreiner</a>
                 </div>
         </div>
         <div id="main">
             <div id="aboutme">
-                <p lang="en" style="margin-top: 40px;">Welcome! I'm a Physics student in <span style="font-weight: normal;">Vienna</span> (Austria) in the area of <span style="font-weight: normal;">Particle Physics</span>. This webpage serves as a collection of theses, projects I worked on with other students throughout my Master's and talks given at various occasions.</p>
-                <p lang="de" style="margin-top: 40px; display: none;">Willkommen! Ich bin Physikstudent in <span style="font-weight: normal;">Wien</span> (Österreich) im Feld der <span style="font-weight: normal;">Teilchenphysik</span>. Diese Website fungiert als Sammlung für Abschlussarbeiten, Projekte, an denen ich mit anderen Studierenden im Laufe meines Masterstudiums gearbeitet habe, und von mir gehaltene Vorträge.</p>
+                <p lang="en" style="margin-top: 40px;">Welcome! I'm a Physics PhD student based in Vienna. My main focus is beyond the standard model physics, more specifically the search for dark matter, signal processing and data visualization/analysis.</p> 
+                <p lang="en">This webpage will (hopefully) grow over time but currently mainly serves as a collection of theses, projects I worked on in the past and talks given at various occasions.</p>
+                <p lang="de" style="margin-top: 40px; display: none;">Willkommen! Ich bin ein Physik Doktoratsstudent in Wien. Mein Fokus liegt auf Physik jenseits des Standardmodells, insbesondere der Dunklen Materie, sowie Signalverarbeitung und Daten-Visualisierung/Analyse.</p>
+                <p lang="de" style="display: none;">Diese Website wird mit der Zeit (hoffentlich) noch wachsen. Aktuell dient sie hauptsächlich als Sammlung von Abschlussarbeiten und Projekten, an denen ich in der Vergangenheit gearbeitet habe, sowie von Vorträgen, die ich zu verschiedenen Anlässen gehalten habe.</p>
 
                 <h1 lang="en">About me</h1>
                 <h1 lang="de" style="display: none;">Über mich</h1>
-                
-                <p lang="en">I started studying Physics in <span style="font-weight: normal;">Graz</span> (Austria) in 2016 and I immediately realized that I picked the right subject for me as I kept getting amazed and reassured that this was my passion. In my third year I got offered a job as a teaching assistant which dragged me into my soon-to-be second passion: Sharing and passing on my excitement to other students. Throughout the rest of my studies I taught undergrad students concepts in Maths, Physics and Scientific Programming.</p>
-                <p lang="en">After finishing my Bachelor's I took a few months off from Physics and attended some Maths courses to further strengthen my mathematical basis before continuing with my Master's in Theoretical Physics. It soon became apparent that the area of <span style="font-weight: normal;">Particle Physics</span> fascinated me in particular and I started attending courses, working on <a href="html/theses_etc.html#projects">projects</a> and eventually also my Master's Thesis in that field. I mostly worked on topics covering <span style="font-weight: normal;">Quantum Field Theories</span> within and beyond the Standard Model of Particle Physics (with an emphasize on <span style="font-weight: normal;">non-perturbative</span> techniques) and also <span style="font-weight: normal;">General Relativity</span>. My <a href="resources/theses_etc/MasterThesis_SCHREINER.pdf" target="_blank">Master's Thesis</a> revolves around a field theoretical subtlety of the <span style="font-weight: normal;">Minimal Supersymmetric Standard Model</span>.</p> 
-                <p lang="en">For my PhD studies I decided to put my theoretical knowledge to good use which is why I moved to experimental Particle Physics, in particular <span style="font-weight: normal;">Dark Matter</span> search.</p>
 
-                <p lang="de" style="display: none;"> Im Herbst 2016 begann ich mein Physikstudium in <span style="font-weight: normal;">Graz</span> und war sofort davon überzeugt, die richtige Wahl getroffen zu haben, denn die Begeisterung wuchs mit jeder Woche und ich wurde laufend darin bestätigt, dass Physik meine Leidenschaft ist. Im dritten Studienjahr wurde mir eine Stelle als Studienassistent angeboten, in der ich erstmals meine Freude für Physik an andere Studierende weitergeben konnte und wodurch ich schließlich meine Liebe zur Lehre entdeckte. Seither habe ich Studierende in diversen Mathematik-, Physik- und Programmier-Lehrveranstaltungen betreut.</p>
-                <p lang="de" style="display: none;">Nachdem ich mein Bachelorstudium abgeschlossen hatte, entschied ich mich, mein mathematisches Fundament weiter zu festigen, und belegte ein Jahr lang Kurse aus dem Mathematikstudium. Anschließend setzte ich mein Physikstudium im Master fort und merkte schnell, dass mich der Bereich der theoretischen <span style="font-weight: normal;">Teilchenphysik</span> besonders interessierte. Ich begann, mich mit Lehrveranstaltungen und <a href="html/theses_etc.html#projects">Projektarbeiten</a> entsprechend zu vertiefen und wählte schließlich auch ein teilchenphysikalisches Thema für meine Masterarbeit. Vorwiegend beschäftigte ich mich mit <span style="font-weight: normal;">Quantenfeldtheorien</span> im und jenseits des Standardmodells der Teilchenphysik (mit Fokus auf <span style="font-weight: normal;">nicht-perturbativen</span> Methoden) und auch der <span style="font-weight: normal;">allgemeinen Relativitätstheorie</span>. Meine <a href="resources/theses_etc/MasterThesis_SCHREINER.pdf" target="_blank">Masterarbeit</a> behandelt eine feldtheoretische Subtilität des <span style="font-weight: normal;">Minimal Supersymmetrischen Standardmodells</span>.</p>
-                <p lang="de" style="display: none;">Damit meine theoretischen Kenntnisse auch Verwendung finden, entschied ich mich, für mein Doktoratsstudium in die experimentelle Teilchenphysik zu wechseln, wo ich nun an der Suche nach <span style="font-weight: normal;">Dunkler Materie</span> mitarbeite.</p>
+                <div class="timeline">
+                    <div class="card">
+                        <div class="info">
+                            <h3 lang="en" class="title">Present - PhD Student at HEPHY and TU Wien</h3>
+
+                            <h3 lang="de" class="title" style="display: none;">Gegenwart - Doktoratsstudent am HEPHY and der TU Wien</h3>
+
+                            <p lang="en">Since January 2023, I am a member of the Vienna group of the <a href="https://cosinus.sites.lngs.infn.it" target='_blank'>COSINUS</a> collaboration. Our aim is to cross check the dark matter discovery claims by DAMA/LIBRA using a detector located in an underground laboratory in Italy.</p>
+
+                            <p lang="de" style="display: none;">Seit Jänner 2023 bin ich Mitglied in der Wiener Gruppe der <a href="https://cosinus.sites.lngs.infn.it" target='_blank'>COSINUS</a> Kollaboration. Unser Ziel ist es, den angeblichen Fund von dunkler Materie durch das DAMA/LIBRA Experiment zu überprüfen. Dies soll mithilfe eines Detektors in einem Untergrundlabor in Italien gelingen.</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="info">
+                            <h3 lang="en" class="title">2022 - Finished Master at TU Graz</h3>
+
+                            <h3 lang="de" class="title" style="display: none;">2022 - Masterabschluss and der TU Graz</h3>
+
+                            <p lang="en">My Master's program focused on theoretical and computational physics, and I specialized in the area of particle physics. I mostly worked on topics covering quantum field theories within and beyond the standard model of particle physics (with an emphasize on non-perturbative techniques) and also general relativity (see <a href="html/theses_etc.html#projects">projects</a>).</p>
+                            <p lang="en">For my <a href="resources/theses_etc/MasterThesis_SCHREINER.pdf" target="_blank">Master's thesis</a> I worked on an inherently gauge-invariant and non-perturbative description of the minimal supersymmetric standard model (MSSM) which I subsequently managed to bring into agreement with perturbative results using the Fröhlich-Morchio-Strocci mechanism. This procedure has been shown to potentially alter the physical spectrum of theories beyond the Standard Model. It was therefore important to investigate what happens in the MSSM.</p> 
+
+                            <p lang="de" style="display: none;">Mein Masterstudium hatte als Schwerpunkt <i>theoretical and computational physics</i> und ich spezialisierte mich weiter auf dem Gebiet der Teilchenphysik. Im Laufe des Studiums habe ich mich hauptsächlich mit Themen zu Quantenfeldtheorien innerhalb und jenseits des Standardmodells der Teilchenphysik, sowie der allgemeinen Relativitätstheorie beschäftigt (siehe <a href="html/theses_etc.html#projects">Projektarbeiten</a>).</p> 
+                            <p lang="de" style="display: none;">In meiner <a href="resources/theses_etc/MasterThesis_SCHREINER.pdf" target="_blank">Masterarbeit</a> habe ich eine manifest eichinvariante Beschreibung des minimal supersymmetrischen Standardmodells (MSSM) ausgearbeitet. In weiterer Folge ist es mir mithilfe des Fröhlich-Morchio-Strocci Mechanismus gelungen, diese in Einklang mit störungstheoretischen Ergebnissen zu bringen. Man weiß mittlerweile, dass so eine Herangehensweise Auswirkungen auf das physikalische Spektrum einer Theorie haben kann. Dadurch wurde es notwendig, herauszufinden, was im Falle des MSSM passiert.</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="info">
+                            <h3 lang="en" class="title">2020 - Finished Bachelor at TU Graz </h3>
+
+                            <h3 lang="de" class="title" style="display: none;">2020 - Bachelorabschluss and der TU Graz</h3>
+
+                            <p lang="en">I started studying physics in Graz (Austria) in 2016. The program was a joint effort of the TU Graz and the University of Graz and I chose to specialize in technical physics. In my <a href="resources/theses_etc/2020_02_01_BachelorThesis.pdf" target="_blank">Bachelor's thesis</a> I considered the Hartree-Fock approximation in molecular physics and how it can be improved by using perturbative re-summation techniques.</p>
+
+                            <p lang="de" style="display: none;"> Im Herbst 2016 begann ich mein Physikstudium in Graz. Dieses war ein Kooperationsprogramm der Uni Graz und der TU Graz und ich wählte die Vertiefungsrichtung der technischen Physik. Meine <a href="resources/theses_etc/2020_02_01_BachelorThesis.pdf" target="_blank">Bachelorarbeit</a> behandelte die Hartree-Fock-Näherung in der Molekülphysik und wie diese mithilfe von störungstheoretischen Resummierungstechniken verbessert werden kann.</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="info">
+                            <h3 lang="en" class="title">2016 - Start of Studies</h3>
+                            <h3 lang="de" class="title" style="display: none;">2016 - Studienbeginn</h3>
+                        </div>
+                    </div>    
+                </div>
             </div>
         </div>
     </div>
