--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
         </div>
         <div id="main">
             <div id="aboutme">
-                <p lang="en" style="margin-top: 40px;">Welcome! I'm a Physics PhD student based in Vienna. My main focus is beyond the standard model physics, more specifically the search for dark matter, signal processing and data visualization/analysis.</p> 
+                <p lang="en" style="margin-top: 40px;">Welcome! I'm a Physics PhD student based in Vienna. My main focus is beyond the standard model physics, more specifically the search for dark matter, signal processing and data analysis.</p> 
                 <p lang="en">This webpage will (hopefully) grow over time but currently mainly serves as a collection of theses, projects I worked on in the past and talks given at various occasions.</p>
-                <p lang="de" style="margin-top: 40px; display: none;">Willkommen! Ich bin ein Physik Doktoratsstudent in Wien. Mein Fokus liegt auf Physik jenseits des Standardmodells, insbesondere der Dunklen Materie, sowie Signalverarbeitung und Daten-Visualisierung/Analyse.</p>
+                <p lang="de" style="margin-top: 40px; display: none;">Willkommen! Ich bin ein Physik Doktoratsstudent in Wien. Mein Fokus liegt auf Physik jenseits des Standardmodells, insbesondere der Dunklen Materie, sowie Signalverarbeitung und Daten-Analyse.</p>
                 <p lang="de" style="display: none;">Diese Website wird mit der Zeit (hoffentlich) noch wachsen. Aktuell dient sie hauptsächlich als Sammlung von Abschlussarbeiten und Projekten, an denen ich in der Vergangenheit gearbeitet habe, sowie von Vorträgen, die ich zu verschiedenen Anlässen gehalten habe.</p>
 
                 <h1 lang="en">About me</h1>
@@ -87,9 +87,9 @@
 
                             <h3 lang="de" class="title" style="display: none;">Gegenwart - Doktoratsstudent am HEPHY and der TU Wien</h3>
 
-                            <p lang="en">Since January 2023, I am a member of the Vienna group of the <a href="https://cosinus.sites.lngs.infn.it" target='_blank'>COSINUS</a> collaboration. Our aim is to cross check the dark matter discovery claims by DAMA/LIBRA using a detector located in an underground laboratory in Italy.</p>
+                            <p lang="en">Since January 2023, I am a member of the Vienna group of the <a href="https://cosinus.sites.lngs.infn.it" target='_blank'>COSINUS</a> collaboration. Our aim is to cross check the dark matter discovery claims by DAMA/LIBRA using cryogenic detectors operated in the LNGS underground laboratory in Italy. My main area of responsibility consists of data analysis both for detector optimization and dark matter results, and the development of new analysis techniques and <a href="https://pypi.org/project/cait/" target='_blank'>software</a>.</p>
 
-                            <p lang="de" style="display: none;">Seit Jänner 2023 bin ich Mitglied in der Wiener Gruppe der <a href="https://cosinus.sites.lngs.infn.it" target='_blank'>COSINUS</a> Kollaboration. Unser Ziel ist es, den angeblichen Fund von dunkler Materie durch das DAMA/LIBRA Experiment zu überprüfen. Dies soll mithilfe eines Detektors in einem Untergrundlabor in Italien gelingen.</p>
+                            <p lang="de" style="display: none;">Seit Jänner 2023 bin ich Mitglied in der Wiener Gruppe der <a href="https://cosinus.sites.lngs.infn.it" target='_blank'>COSINUS</a> Kollaboration. Unser Ziel ist es, den angeblichen Fund von dunkler Materie durch das DAMA/LIBRA Experiment zu überprüfen. Dies soll mithilfe von kryogenen Detektoren im LNGS Untergrundlabor in Italien gelingen. Meine Hauptaufgabe ist Datenanalyse für die Detektoroptimierung, sowie für Resultate zur dunklen Materie. Außerdem entwickle ich neue Methoden zur (statistischen) Auswertung dieser Daten und die entsprechende <a href="https://pypi.org/project/cait/" target='_blank'>Software</a>.</p>
                         </div>
                     </div>
                     <div class="card">
